fix(workflow): 修复挂起的流程定义在列表中无法显示的问题
根据前端传入的 suspensionState 参数过滤流程定义状态：
- suspensionState=1 时查询激活状态的流程
- suspensionState=2 时查询挂起状态的流程
- suspensionState=null 时查询所有状态的流程